--- a/package.json
+++ b/package.json
@@ -1,23 +1,12 @@
 {
-  "name": "can-stache-moment",
+  "name": "can-stache-moment-docs",
   "version": "0.3.3",
-  "description": "Moment.js helpers for CanJS Stache templates.",
+  "description": "Documentation for can-stache-moment.",
   "main": "can-stache-moment",
-  "scripts": {
-    "test": "grunt test --stack",
-    "prepublish": "./node_modules/.bin/grunt build"
-  },
   "repository": {
     "type": "git",
     "url": "https://marshallswain@github.com/marshallswain/can-stache-moment.git"
   },
-  "keywords": [
-    "CanJS",
-    "Moment.js",
-    "Stache",
-    "CanJS",
-    "Helper"
-  ],
   "author": "Marshall Thompson",
   "license": "MIT",
   "bugs": {
@@ -28,19 +17,11 @@
     "main": "can-stache-moment",
     "npmIgnore": "devDependencies",
     "transpiler": "babel",
-    "directories":{
-      "lib":"src"
+    "directories": {
+      "lib": "src"
     }
   },
   "dependencies": {
-    "can": "^2.3.0-pre.0",
-    "jquery": "^2.1.4",
-    "moment": "^2.10.2"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "steal": "^0.10.3",
-    "steal-tools": "^0.10.2"
+    "documentjs": "^0.3.0-pre.1"
   }
 }
